Added description to webpage

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<p>Spooky
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Sample Webpage</title>
+    </head> 
+    <body>
+        <p>Name: Paul Song</p>
+        <p>Description: This page was created as practice for <i>COMP290</i>.</p>
+    </body>
+</html>
